--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Abuja Prestige Portfolio™</title>
+  <title>Bulgani Urban Homes Ltd</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -16,36 +16,36 @@
 
   <section class="bg-gray-100 py-12">
     <div class="max-w-4xl mx-auto px-4">
-      <h2 class="text-2xl font-semibold mb-4">Why High-Net-Worth Clients Choose Us</h2>
+      <h2 class="text-2xl font-semibold mb-4">Why Clients Choose Us</h2>
       <ul class="space-y-4">
         <li>✅ Pre-launch access to Abuja’s most prestigious homes</li>
         <li>✅ Fully-managed investment properties with guaranteed rental income</li>
         <li>✅ Seamless purchase process from anywhere in the world</li>
         <li>✅ Yearly appreciation reports and resale strategies</li>
-        <li>✅ Direct line to Abuja’s top-tier developer network</li>
+        <li>✅ Direct line to Nigeria’s top-tier developer network</li>
       </ul>
     </div>
   </section>
 
   <section class="bg-white py-12">
     <div class="max-w-5xl mx-auto px-4">
-      <h2 class="text-2xl font-bold mb-6">What’s Inside the Portfolio</h2>
+      <h2 class="text-2xl font-bold mb-6">🏛️ What’s Inside Our Portfolio</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
-          <h3 class="text-xl font-semibold">Off-Market Diplomatic Properties</h3>
-          <p class="mt-2 text-gray-600">Presidential villas, waterfront penthouses, and high-yield commercial assets.</p>
+          <h3 class="text-xl font-semibold">Off-Market Luxury & Diplomatic-Grade Properties</h3>
+          <p class="mt-2 text-gray-600">Presidential villas, waterfront penthouses, smart estates and high-yield commercial assets.</p>
         </div>
         <div>
-          <h3 class="text-xl font-semibold">1-Year Guaranteed Rental Income</h3>
-          <p class="mt-2 text-gray-600">We pay you monthly even if your property isn’t rented yet.</p>
+          <h3 class="text-xl font-semibold">Priority Access to Developer Projects</h3>
+          <p class="mt-2 text-gray-600">Co-invest, pre-buy, or co-develop Nigeria’s next big thing—before it hits the market.</p>
         </div>
         <div>
-          <h3 class="text-xl font-semibold">VIP "Fly & Finalize" Closing</h3>
-          <p class="mt-2 text-gray-600">Airport pickup, luxury stay, and ownership finalized in 48 hours.</p>
+          <h3 class="text-xl font-semibold">VIP Closing</h3>
+          <p class="mt-2 text-gray-600">Ownership finalized in 48 hours.</p>
         </div>
         <div>
           <h3 class="text-xl font-semibold">Lifetime Investor Concierge</h3>
-          <p class="mt-2 text-gray-600">We manage your property, tenants, and exit strategy for you.</p>
+          <p class="mt-2 text-gray-600">From property management to resale planning, your dedicated team handles it all while you focus on what matters..</p>
         </div>
       </div>
     </div>
