--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="bg-gray-50 text-gray-800">
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 py-6">
-      <h1 class="text-4xl font-bold text-gray-900">Abuja Prestige Portfolio™</h1>
-      <p class="mt-2 text-lg text-gray-600">Access Abuja’s most exclusive homes, before the world sees them.</p>
+      <h1 class="text-4xl font-bold text-gray-900">Bulgani Urban Homes</h1>
+      <p class="mt-2 text-lg text-gray-600">Access Nigeria’s most exclusive homes, before the world sees them.</p>
     </div>
   </header>
 
@@ -18,7 +18,7 @@
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-2xl font-semibold mb-4">Why Clients Choose Us</h2>
       <ul class="space-y-4">
-        <li>✅ Pre-launch access to Abuja’s most prestigious homes</li>
+        <li>✅ Pre-launch access to Nigeria’s most prestigious homes</li>
         <li>✅ Fully-managed investment properties with guaranteed rental income</li>
         <li>✅ Seamless purchase process from anywhere in the world</li>
         <li>✅ Yearly appreciation reports and resale strategies</li>
@@ -55,10 +55,10 @@
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-2xl font-bold mb-6">What Our Clients Say</h2>
       <blockquote class="italic border-l-4 border-green-500 pl-4 text-gray-700 mb-4">
-        “I closed from the UK without ever stepping foot in Nigeria. I now earn ₦1.2M monthly from a smart duplex in Guzape.” – <strong>Chika O.</strong>
+        “I closed from the UK without ever stepping foot in Nigeria. I now earn ₦1.2M monthly from a smart duplex in Guzape.” – <strong>Chika O.</strong>, Tech Exec & Investor
       </blockquote>
       <blockquote class="italic border-l-4 border-green-500 pl-4 text-gray-700">
-        “The best investment experience I’ve had in West Africa. Period.” – <strong>Farouk B.</strong>
+        “The best investment experience I’ve had in West Africa. Period.” – <strong>Farouk B.</strong>, Oil & Gas Partner
       </blockquote>
     </div>
   </section>
