--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <section class="bg-gray-100 py-12">
     <div class="max-w-4xl mx-auto px-4">
-      <h2 class="text-2xl font-bold mb-6">What Our Clients Say</h2>
+      <h2 class="text-2xl font-bold mb-6">📈 What Our Clients Say</h2>
       <blockquote class="italic border-l-4 border-green-500 pl-4 text-gray-700 mb-4">
         “I closed from the UK without ever stepping foot in Nigeria. I now earn ₦1.2M monthly from a smart duplex in Guzape.” – <strong>Chika O.</strong>, Tech Exec & Investor
       </blockquote>
@@ -65,7 +65,7 @@
 
   <section class="bg-white py-12 text-center">
     <div class="max-w-xl mx-auto px-4">
-      <h2 class="text-3xl font-bold text-gray-900">Ready to Join Abuja’s Inner Circle?</h2>
+      <h2 class="text-3xl font-bold text-gray-900">Ready to Join Nigeria’s Inner Circle?</h2>
       <p class="mt-4 text-gray-600">We only work with 10 clients per quarter. If you’re serious about luxury, legacy, and low-effort returns…</p>
       <a href="#" class="mt-6 inline-block bg-black text-white px-6 py-3 rounded-full font-semibold hover:bg-gray-800">Join the Prestige Portfolio Now</a>
       <p class="mt-4">🔒 Limited Slots | 💼 1-on-1 Onboarding | 💬 Direct WhatsApp Access</p>
@@ -78,7 +78,7 @@
   </section>
 
   <footer class="bg-black text-white py-6 text-center text-sm">
-    Abuja Prestige Portfolio™ | Presented by [Your Brand Name] <br/>
+    Presented by Bulgani Urban Homes Ltd <br/>
     Luxury Real Estate | Investment Advisory | Property Development<br/>
     📍 Abuja, Nigeria | 🌍 Serving Global Investors
   </footer>
