--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 py-6">
       <h1 class="text-4xl font-bold text-gray-900">Bulgani Urban Homes</h1>
-      <p class="mt-2 text-lg text-gray-600">Access Nigeria’s most exclusive homes, before the world sees them.</p>
+      <p class="mt-2 text-lg text-gray-600">We offer a private service for buyers and investors seeking off-market properties, luxury estates, and premium returns—with zero stress. Access Nigeria’s most exclusive homes, before the world sees them.</p>
     </div>
   </header>
 
@@ -19,7 +19,7 @@
       <h2 class="text-2xl font-semibold mb-4">Why Clients Choose Us</h2>
       <ul class="space-y-4">
         <li>✅ Pre-launch access to Nigeria’s most prestigious homes</li>
-        <li>✅ Fully-managed investment properties with guaranteed rental income</li>
+        <li>✅ Fully-managed investment properties</li>
         <li>✅ Seamless purchase process from anywhere in the world</li>
         <li>✅ Yearly appreciation reports and resale strategies</li>
         <li>✅ Direct line to Nigeria’s top-tier developer network</li>
@@ -66,8 +66,8 @@
   <section class="bg-white py-12 text-center">
     <div class="max-w-xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-gray-900">Ready to Join Nigeria’s Inner Circle?</h2>
-      <p class="mt-4 text-gray-600">We only work with 10 clients per quarter. If you’re serious about luxury, legacy, and low-effort returns…</p>
-      <a href="#" class="mt-6 inline-block bg-black text-white px-6 py-3 rounded-full font-semibold hover:bg-gray-800">Join the Prestige Portfolio Now</a>
+      <p class="mt-4 text-gray-600">We only work with 10 clients per quarter. If you’re serious about luxury, legacy, and premium returns…</p>
+      <a href="#" class="mt-6 inline-block bg-black text-white px-6 py-3 rounded-full font-semibold hover:bg-gray-800">Join Our Portfolio Now</a>
       <p class="mt-4">🔒 Limited Slots | 💼 1-on-1 Onboarding | 💬 Direct WhatsApp Access</p>
     </div>
   </section>
