--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </a>
         <div>
           <h1 class="text-xl sm:text-2xl font-bold text-gold">Bulgani Group</h1>
-          <p class="text-xs sm:text-sm text-gray-600">Luxury Real Estate</p>
+          <p class="text-xs sm:text-sm text-gray-600">Real Estate Development</p>
         </div>
       </div>
       <!-- Navigation -->
