--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
   <header class="py-4 px-6 fixed top-0 left-0 right-0 z-50 bg-white/80 backdrop-blur-sm shadow-sm">
     <nav class="max-w-7xl mx-auto flex justify-between items-center">
       <div class="text-2xl font-bold text-indigo-600">Property Buyer Magnet™</div>
-      <a href="#pricing" class="hidden md:inline-block bg-indigo-600 text-white font-semibold px-6 py-2 rounded-full shadow-lg hover:bg-indigo-700 transition duration-300">Reserve Your Slot</a>
+      <a href="#pricing" 
+   class="bg-white text-indigo-800 font-semibold rounded-full shadow-lg
+          hover:bg-gray-100 transition duration-300 transform hover:scale-105
+          w-full sm:w-auto px-6 py-3 md:px-10 md:py-4 text-center md:text-lg">
+  Reserve Your Premium Landing Page
+</a>
     </nav>
   </header>
 
