--- a/index.html
+++ b/index.html
@@ -3,33 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Premium Real Estate Landing Pages | Grand Slam Offer</title>
+  <title>Premium Real Estate Landing Pages | Property Buyer Magnet™</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap');
+
     body {
       font-family: 'Poppins', sans-serif;
+      scroll-behavior: smooth;
+      overflow-x: hidden;
+    }
+
+    /* Smooth scroll and subtle background animation */
+    .hero-bg {
+      animation: gradientShift 15s ease infinite;
+      background-size: 200% 200%;
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* Custom hover and transition effects */
+    .hover-lift {
+      transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.3s;
+    }
+    .hover-lift:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+    }
+
+    /* Parallax effect for hero */
+    .parallax-layer {
+      transform: translateZ(-1px) scale(1.1);
+      transition: transform 0.5s ease;
+    }
+
+    /* Sticky header with glassmorphism */
+    .glass-header {
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    /* Custom cursor for interactive feel */
+    body {
+      cursor: default;
+    }
+    a, button {
+      cursor: pointer;
     }
   </style>
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-gray-50 text-gray-900 antialiased">
 
   <!-- Header -->
-  <header class="py-4 px-6 fixed top-0 left-0 right-0 z-50 bg-white/80 backdrop-blur-sm shadow-sm">
+  <header class="py-4 px-6 fixed top-0 left-0 right-0 z-50 glass-header shadow-sm">
     <nav class="max-w-7xl mx-auto flex justify-between items-center">
       <div class="text-2xl font-bold text-indigo-600">Property Buyer Magnet™</div>
-      <a href="#pricing" 
-   class="bg-white text-indigo-800 font-semibold rounded-full shadow-lg
-          hover:bg-gray-100 transition duration-300 transform hover:scale-105
-          w-full sm:w-auto px-6 py-3 md:px-10 md:py-4 text-center md:text-lg">
-  Reserve Your Premium Landing Page
-</a>
+      <a href="#pricing" class="hidden md:inline-block bg-indigo-600 text-white font-semibold px-6 py-2 rounded-full shadow-lg hover:bg-indigo-700 transition duration-300 hover-lift">Reserve Your Slot</a>
     </nav>
   </header>
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex items-center justify-center py-20 px-6 bg-gradient-to-br from-indigo-800 to-purple-900 text-white relative overflow-hidden">
-    <div class="absolute inset-0 z-0 opacity-20">
+  <section class="min-h-screen flex items-center justify-center py-20 px-6 bg-gradient-to-br from-indigo-800 via-purple-900 to-indigo-600 text-white relative overflow-hidden hero-bg">
+    <div class="absolute inset-0 z-0 opacity-20 parallax-layer">
       <svg class="w-full h-full" viewBox="0 0 1440 800" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 200C250 100 500 0 720 0C940 0 1190 100 1440 200V800H0V200Z" fill="url(#paint0_linear_2_2)"/>
         <defs>
@@ -41,10 +84,10 @@
       </svg>
     </div>
 
-    <div class="relative z-10 text-center max-w-4xl mx-auto">
-      <h1 class="text-4xl md:text-6xl font-bold mb-6 drop-shadow-lg">High-Converting Landing Pages for Premium Properties</h1>
+    <div class="relative z-10 text-center max-w-4xl mx-auto" data-animate="hero">
+      <h1 class="text-4xl md:text-6xl font-bold mb-6 drop-shadow-lg leading-tight">High-Converting Landing Pages for Premium Properties</h1>
       <p class="text-lg md:text-2xl mb-8 font-light max-w-3xl mx-auto">Turn your property ad clicks into serious buyer leads — in just 7 days. No wasted money, no delays, just measurable ROI.</p>
-      <a href="#pricing" class="bg-white text-indigo-800 font-semibold px-6 py-3 md:px-10 md:py-4 rounded-full shadow-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105 w-full sm:w-auto text-center md:text-lg">
+      <a href="#pricing" class="bg-white text-indigo-800 font-semibold px-4 py-2 sm:px-6 sm:py-3 md:px-8 md:py-4 rounded-full shadow-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105 hover-lift w-full sm:w-auto text-base sm:text-lg md:text-xl inline-block min-h-[48px] flex items-center justify-center">
         Reserve Your Premium Landing Page
       </a>
       <p class="mt-6 text-sm italic font-light">⚡ Only 3 premium projects accepted each month</p>
@@ -53,9 +96,9 @@
 
   <!-- Why Not a Full Website Section -->
   <section class="py-20 px-6 max-w-6xl mx-auto">
-    <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Why Single-Offer Landing Pages Outperform Full Websites</h2>
+    <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" data-animate="fade-up">Why Single-Offer Landing Pages Outperform Full Websites</h2>
     <div class="grid md:grid-cols-2 gap-12">
-      <div class="bg-white p-10 rounded-2xl shadow-xl border border-gray-200 transform transition duration-300 hover:scale-105">
+      <div class="bg-white p-10 rounded-2xl shadow-xl border border-gray-200 transform transition duration-300 hover-lift" data-animate="fade-up" data-delay="0.2">
         <h3 class="font-semibold text-2xl mb-4 text-red-600">Full Websites</h3>
         <ul class="space-y-4 text-gray-700 text-lg">
           <li class="flex items-start">
@@ -76,7 +119,7 @@
           </li>
         </ul>
       </div>
-      <div class="bg-indigo-50 p-10 rounded-2xl shadow-xl border border-indigo-200 transform transition duration-300 hover:scale-105">
+      <div class="bg-indigo-50 p-10 rounded-2xl shadow-xl border border-indigo-200 transform transition duration-300 hover-lift" data-animate="fade-up" data-delay="0.4">
         <h3 class="font-semibold text-2xl mb-4 text-indigo-700">Single-Offer Landing Pages</h3>
         <ul class="space-y-4 text-gray-700 text-lg">
           <li class="flex items-start">
@@ -103,16 +146,16 @@
   <!-- Case Study Section -->
   <section class="bg-gray-50 py-20 px-6">
     <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Case Study: Lagos-Based Real Estate Developer</h2>
-      <div class="bg-white rounded-2xl shadow-xl p-8 md:flex items-center gap-10">
-        <div class="flex-shrink-0 mb-6 md:mb-0 transform transition duration-300 hover:scale-105">
-          <img src="https://via.placeholder.com/600x400" alt="Landing Page Screenshot" class="rounded-xl shadow-lg w-full md:w-auto h-auto">
+      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" data-animate="fade-up">Case Study: Lagos-Based Real Estate Developer</h2>
+      <div class="bg-white rounded-2xl shadow-xl p-8 md:flex items-center gap-10" data-animate="fade-up" data-delay="0.2">
+        <div class="flex-shrink-0 mb-6 md:mb-0 transform transition duration-300 hover-lift">
+          <img src="https://via.placeholder.com/600x400" alt="Landing Page Screenshot" class="rounded-xl shadow-lg w-full md:w-[600px] h-auto">
         </div>
         <div class="flex-grow">
           <h3 class="text-2xl font-bold mb-4">From Zero Online Presence to a Fully Functional Funnel in 7 Days</h3>
           <p class="mb-4 text-gray-700">We built a single-offer landing page from scratch for a Lagos-based real estate developer. In just one week, they went from no online presence to a conversion-ready funnel — complete with lead capture, CRM integration, and ad tracking.</p>
           
-          <div class="bg-indigo-50 border-l-4 border-indigo-600 p-6 rounded-xl mb-6 shadow-sm">
+          <div class="bg-indigo-50 border-l-4 border-indigo-600 p-6 rounded-xl mb-6 shadow-sm hover-lift" data-animate="fade-up" data-delay="0.4">
             <p class="text-lg text-gray-800 font-medium">📊 Industry Benchmark</p>
             <p class="text-gray-700 mt-2">Dedicated landing pages convert 
               <span class="font-bold text-indigo-700">10–20% of visitors</span> into leads, versus 
@@ -120,7 +163,7 @@
             </p>
           </div>
 
-          <div class="bg-green-50 border-l-4 border-green-600 p-6 rounded-xl mb-6 shadow-sm">
+          <div class="bg-green-50 border-l-4 border-green-600 p-6 rounded-xl mb-6 shadow-sm hover-lift" data-animate="fade-up" data-delay="0.6">
             <p class="text-lg text-gray-800 font-medium">💰 Cost Efficiency</p>
             <p class="text-gray-700 mt-2">Generic real estate ads can cost 
               <span class="font-bold text-red-600">$200–$300 per qualified lead</span>. With high-converting landing pages, leads often cost 
@@ -136,9 +179,9 @@
 
   <!-- Pricing Section -->
   <section id="pricing" class="py-20 px-6 max-w-4xl mx-auto text-center">
-    <h2 class="text-3xl md:text-4xl font-bold mb-6">Your $5,000 Investment vs. Weeks of Lost Sales</h2>
+    <h2 class="text-3xl md:text-4xl font-bold mb-6" data-animate="fade-up">Your $5,000 Investment vs. Weeks of Lost Sales</h2>
     <p class="text-lg md:text-xl mb-8 font-light">One page. One property. Maximum results — designed to sell faster and smarter.</p>
-    <div class="bg-white rounded-2xl shadow-2xl p-8 md:p-10 border border-indigo-200 flex flex-col items-center gap-6">
+    <div class="bg-white rounded-2xl shadow-2xl p-8 md:p-10 border border-indigo-200 flex flex-col items-center gap-6 hover-lift" data-animate="fade-up" data-delay="0.2">
       <ul class="text-left space-y-4 text-gray-700 text-lg w-full">
         <li class="flex items-center">
           <span class="text-indigo-600 text-2xl mr-4">✓</span>
@@ -166,7 +209,7 @@
         </li>
       </ul>
       <a href="#contact" 
-         class="bg-indigo-600 text-white font-semibold px-6 py-3 md:px-8 md:py-4 rounded-full shadow-lg hover:bg-indigo-700 transition duration-300 transform hover:scale-105 w-full sm:w-auto text-center md:text-lg">
+         class="bg-indigo-600 text-white font-semibold px-6 py-3 md:px-8 md:py-4 rounded-full shadow-lg hover:bg-indigo-700 transition duration-300 transform hover:scale-105 hover-lift w-full sm:w-auto text-center md:text-lg">
          Reserve Your Premium Landing Page
       </a>
       <p class="mt-6 text-sm text-red-600 font-semibold animate-pulse">⚠️ Only 3 premium projects accepted each month — secure your slot now</p>
@@ -175,21 +218,21 @@
 
   <!-- FAQ Section -->
   <section class="bg-gray-50 py-20 px-6 max-w-5xl mx-auto">
-    <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Frequently Asked Questions</h2>
+    <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" data-animate="fade-up">Frequently Asked Questions</h2>
     <div class="space-y-6">
-      <div class="bg-white p-8 rounded-2xl shadow-lg border border-gray-200 transition duration-300 hover:shadow-xl">
+      <div class="bg-white p-8 rounded-2xl shadow-lg border border-gray-200 transition duration-300 hover-lift" data-animate="fade-up" data-delay="0.2">
         <h3 class="font-bold text-xl mb-3 text-indigo-700">Why $5,000?</h3>
         <p class="text-gray-700">This is a premium solution designed for maximum ROI. You get strategy, copywriting, CRM integration, analytics, mobile optimization, and a page built to convert serious buyers. Weeks of lost sales are avoided with this investment.</p>
       </div>
-      <div class="bg-white p-8 rounded-2xl shadow-lg border border-gray-200 transition duration-300 hover:shadow-xl">
+      <div class="bg-white p-8 rounded-2xl shadow-lg border border-gray-200 transition duration-300 hover-lift" data-animate="fade-up" data-delay="0.4">
         <h3 class="font-bold text-xl mb-3 text-indigo-700">How fast is delivery?</h3>
         <p class="text-gray-700">Your premium landing page is delivered in just 7 days with dedicated support throughout the process.</p>
       </div>
-      <div class="bg-white p-8 rounded-2xl shadow-lg border border-gray-200 transition duration-300 hover:shadow-xl">
+      <div class="bg-white p-8 rounded-2xl shadow-lg border border-gray-200 transition duration-300 hover-lift" data-animate="fade-up" data-delay="0.6">
         <h3 class="font-bold text-xl mb-3 text-indigo-700">What if I don’t have property photos yet?</h3>
         <p class="text-gray-700">No problem. We can start with renders, placeholders, or stock images, then update once your real photos are ready — at no extra cost.</p>
       </div>
-      <div class="bg-white p-8 rounded-2xl shadow-lg border border-gray-200 transition duration-300 hover:shadow-xl">
+      <div class="bg-white p-8 rounded-2xl shadow-lg border border-gray-200 transition duration-300 hover-lift" data-animate="fade-up" data-delay="0.8">
         <h3 class="font-bold text-xl mb-3 text-indigo-700">Do you offer ongoing support?</h3>
         <p class="text-gray-700">Yes. Optional monthly support and optimization is available to keep your landing page converting at its highest potential.</p>
       </div>
@@ -197,13 +240,26 @@
   </section>
 
   <!-- Contact / CTA Section -->
-  <section id="contact" class="bg-indigo-700 text-white py-20 px-6 text-center">
-    <h2 class="text-3xl md:text-4xl font-bold mb-6 drop-shadow">Ready to Sell Your Property Faster?</h2>
-    <p class="text-lg md:text-xl mb-8 max-w-2xl mx-auto font-light">Let’s build your premium landing page and start converting ad clicks into serious buyers this week.</p>
-    <a href="mailto:hello@youremail.com" class="bg-white text-indigo-700 font-semibold px-6 py-3 md:px-10 md:py-4 rounded-full shadow-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105 w-full sm:w-auto text-center md:text-lg">
-      Email Me to Get Started
-    </a>
-    <p class="mt-6 text-sm italic font-light">⚡ Secure your slot before this month’s limited spots run out</p>
+  <section id="contact" class="bg-indigo-700 text-white py-20 px-6 text-center relative overflow-hidden">
+    <div class="absolute inset-0 z-0 opacity-10">
+      <svg class="w-full h-full" viewBox="0 0 1440 800" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 200C250 100 500 0 720 0C940 0 1190 100 1440 200V800H0V200Z" fill="url(#paint0_linear_2_2)"/>
+        <defs>
+          <linearGradient id="paint0_linear_2_2" x1="720" y1="0" x2="720" y2="800" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#4F46E5"/>
+            <stop offset="1" stop-color="#8B5CF6"/>
+          </linearGradient>
+        </defs>
+      </svg>
+    </div>
+    <div class="relative z-10" data-animate="fade-up">
+      <h2 class="text-3xl md:text-4xl font-bold mb-6 drop-shadow">Ready to Sell Your Property Faster?</h2>
+      <p class="text-lg md:text-xl mb-8 max-w-2xl mx-auto font-light">Let’s build your premium landing page and start converting ad clicks into serious buyers this week.</p>
+      <a href="mailto:hello@youremail.com" class="bg-white text-indigo-700 font-semibold px-6 py-3 md:px-10 md:py-4 rounded-full shadow-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105 hover-lift w-full sm:w-auto text-center md:text-lg">
+        Email Me to Get Started
+      </a>
+      <p class="mt-6 text-sm italic font-light">⚡ Secure your slot before this month’s limited spots run out</p>
+    </div>
   </section>
 
   <!-- Footer -->
@@ -211,5 +267,45 @@
     <p>© 2025 Your Name. Premium Real Estate Landing Page Specialist.</p>
   </footer>
 
+  <!-- GSAP Animations -->
+  <script>
+    gsap.registerPlugin(ScrollTrigger);
+
+    // Hero animation
+    gsap.from("[data-animate='hero']", {
+      opacity: 0,
+      y: 50,
+      duration: 1.2,
+      ease: "power3.out"
+    });
+
+    // Fade-up animations for sections
+    gsap.utils.toArray("[data-animate='fade-up']").forEach((element, i) => {
+      gsap.from(element, {
+        opacity: 0,
+        y: 30,
+        duration: 0.8,
+        delay: element.dataset.delay || 0,
+        ease: "power3.out",
+        scrollTrigger: {
+          trigger: element,
+          start: "top 80%",
+          toggleActions: "play none none none"
+        }
+      });
+    });
+
+    // Parallax effect for hero background
+    gsap.to(".parallax-layer", {
+      y: 50,
+      ease: "none",
+      scrollTrigger: {
+        trigger: ".hero-bg",
+        start: "top top",
+        end: "bottom top",
+        scrub: true
+      }
+    });
+  </script>
 </body>
 </html>
